...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"/>

     <ScrollView
         android:id="@+id/add_book_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">


                     <EditText
                         android:id="@+id/title_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/top_margin"
                         android:layout_marginStart="@dimen/left_right_margin"
                         android:layout_marginEnd="@dimen/left_right_margin"
                         android:hint="@string/title_tag"
...
                         android:layout_marginStart="@dimen/left_right_margin"
                         android:layout_marginEnd="@dimen/left_right_margin"
                         android:weightSum="10"
                         android:orientation="horizontal">

                             <EditText
                                 android:id="@+id/last_name_input"
                                 android:layout_weight="5"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/left_right_margin"
                                 android:hint="@string/last_name_tag"
                                 android:textSize="@dimen/text_size"
                                 android:inputType="text"/>

                             <EditText
                                 android:id="@+id/first_name_input"
                                 android:layout_weight="4"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/left_right_margin"
                                 android:hint="@string/first_name_tag"
                                 android:textSize="@dimen/text_size"
                                 android:inputType="text"/>

                             <ImageView
                                 android:id="@+id/add_author"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:layout_gravity="center"
                                 android:src="@drawable/ic_add"
                                 android:onClick="clickAddAuthor"/>

                     </LinearLayout>


                     <LinearLayout
                         android:id="@+id/author_layout2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/left_right_margin"
                         android:layout_marginEnd="@dimen/left_right_margin"
                         android:weightSum="10"
                         android:orientation="horizontal"
...
                                 android:layout_marginEnd="@dimen/left_right_margin"
                                 android:hint="@string/first_name_tag"
                                 android:textSize="@dimen/text_size"
                                 android:inputType="text"/>

                             <ImageView
                                 android:id="@+id/remove_author2"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:layout_gravity="center"
                                 android:src="@drawable/ic_remove"
                                 android:onClick="clickRemoveAuthor2"/>

                     </LinearLayout>



                     <LinearLayout
                         android:id="@+id/author_layout3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/left_right_margin"
                         android:layout_marginEnd="@dimen/left_right_margin"
                         android:weightSum="10"
                         android:orientation="horizontal"
...
                                 android:layout_marginEnd="@dimen/left_right_margin"
                                 android:hint="@string/first_name_tag"
                                 android:textSize="@dimen/text_size"
                                 android:inputType="text"/>

                             <ImageView
                                 android:id="@+id/remove_author3"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:layout_gravity="center"
                                 android:src="@drawable/ic_remove"
                                 android:onClick="clickRemoveAuthor3"/>
...
                                 android:layout_weight="3"
                                 android:layout_gravity="center"
                                 android:orientation="vertical"
                                 android:gravity="center">

                                     <Button
                                         android:id="@+id/take_photo"
                                         android:layout_width="@dimen/camera_button_size"
                                         android:layout_height="@dimen/camera_button_size"
                                         android:layout_gravity="center"
                                         android:background="@drawable/ic_add_a_photo"
                                         android:onClick="clickTakePhoto"
                                         style="@style/Widget.AppCompat.Button.Borderless"/>
...
