...


    <string name="action_change_view">Change View</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_done">Done</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Keep your books organized</string>
    <string name="nav_header_desc">Navigation header</string>
...
    <string name="delete_library_confirmed">Library deleted</string>
    <string name="rate_string">Rate</string>
    <string name="contact_string">Contact us</string>
    <string name="about_announcement">This app is designed to help organize your books into one application. Enjoy using this application and let us know your feedback so we can improve functionality of the app.</string>
    <string name="error_occurred">An error occurred</string>
    <string name="description_cover_module" translatable="false">cover_module_image_view</string>
    <string name="select_image">Select image from device</string>
    <string name="take_photo">Use camera</string>
    <string name="add_book_button_description" translatable="false">add_book_button</string>
    <string name="scan_isbn_description" translatable="false">scan_isbn</string>
    <string name="search_online_description" translatable="false">search_online</string>
    <string name="search_image_view_description" translatable="false">search_image_view</string>
    <string name="cancel_image_view_description" translatable="false">cancel_image_view</string>
...
